# mentoring-algoritma

./: .gitignore  CMakeLists.txt  README.md
1-BasicOfC/: 1_basic_c.c  1_basic_if_else.c  1_basic_looping.c
2-Array/: 2_array.c
3_Searching/: 3_seq_searching.c
3_Sorting/: 3_bubble_sort.c  3_selection_sort.c
4_Searching/: 4_binary_search.c  4_seq_searching.c
