cmake_minimum_required(VERSION 3.17)
project(20210416 C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)
add_executable(1_basic_c "1-BasicOfC/1_basic_c.c")
add_executable(1_basic_if_else "1-BasicOfC/1_basic_if_else.c")
add_executable(1_basic_looping "1-BasicOfC/1_basic_looping.c")
add_executable(2_array "2-Array/2_array.c")
add_executable(3_bubble_sort "3_Sorting/3_bubble_sort.c")
add_executable(4_seq_searching "4_Searching/4_seq_searching.c")
add_executable(4_binary_search.c "4_Searching/4_binary_search.c")